grammar/tree-sitter-gql/grammar.js
    source_file: ($) =>
      optional(seq(commaSepSemi($), optional(";"))),

    _statement: ($) =>
      choice(
        $.query,
        $.create_schema,
        $.drop_schema,
        $.create_graph,
        $.drop_graph,
        $.create_graph_type,
        $.drop_graph_type,
      ),

    // Queries.

    // A write may end without projecting anything and a read may not,
    // which is the engine's rule and the reason RETURN is not simply
    // optional here. Which clauses are writes is a question about
    // meaning rather than shape, so this asks the weaker question a
    // grammar can ask: a statement is clauses, and it either ends in a
    // RETURN or ends.
    query: ($) =>
      seq(
        optional($.use_clause),
        choice(seq(repeat($._reading_clause), $.return_clause), repeat1($._reading_clause)),
      ),

    graph_ref: ($) =>
      choice(
        kw("CURRENT_PROPERTY_GRAPH"),
        kw("CURRENT_GRAPH"),
        seq(optional(seq(optional(kw("PROPERTY")), kw("GRAPH"))), $.graph_name),
      ),

    _reading_clause: ($) =>
      choice(
        $.match_clause,
        $.insert_clause,
        $.set_clause,
        $.remove_clause,
        $.delete_clause,
        $.call_clause,
        $.unwind_clause,
        $.with_clause,
      ),

    match_clause: ($) =>
      seq(optional(kw("OPTIONAL")), kw("MATCH"), $.pattern, optional($.where_clause)),

    return_clause: ($) => seq(kw("RETURN"), $.projection),

    where_clause: ($) => seq(kw("WHERE"), $._expression),

    projection: ($) =>
      seq(
        optional(kw("DISTINCT")),
        choice("*", $.projection_item),
        repeat(seq(",", $.projection_item)),
        optional($.order_by),
        optional(seq(kw("SKIP"), $._expression)),
        optional(seq(kw("LIMIT"), $._expression)),
      ),

    projection_item: ($) => seq($._expression, optional(seq(kw("AS"), field("alias", $._name)))),

    pattern: ($) => commaSep1($.path),

    path: ($) =>
      seq(
        optional(seq(field("name", $._name), "=")),
        optional($.path_prefix),
        $.node,
        repeat(seq($.relationship, $.node)),
      ),

    // The seven path selectors of ISO 16.6, and the mode, which the
    // standard puts inside the prefix rather than behind it: the words
    // come in one order, the selector, then the mode, then PATH or
    // PATHS, then GROUP last of all. PATH and PATHS are noise the
    // standard allows, while GROUP is what tells k lengths from k paths
    // and is the one form whose count may be left out.
    node: ($) =>
      seq(
        "(",
        optional(field("name", $._name)),
        repeat(seq(":", $.label_expr)),
        optional($.property_map),
        ")",
      ),

    label_expr: ($) => seq($._label_term, repeat(seq("|", $._label_term))),

    _label_term: ($) => seq($._label_factor, repeat(seq("&", $._label_factor))),

    label: ($) => $._name,

    // The seven edge patterns of ISO 18.9 as one production. Both bars
    // are the same character and a tilde takes no arrowhead, which are
    // rules the engine applies after parsing rather than in it.
    relationship: ($) =>
      seq(
        optional("<"),
        $._bar,
        optional(seq(optional($.rel_detail), $._bar)),
        optional(">"),
        optional($.quantifier),
      ),

    // The graph pattern quantifier of ISO 16.10, which says what a hop
    // range inside the brackets says and is the form the standard's own
    // examples are written in.
    _bar: ($) => choice("-", "~"),

    rel_detail: ($) =>
      seq(
        "[",
        optional(field("name", $._name)),
        optional(seq(":", $.label, repeat(seq("|", $.label)))),
        optional(seq("*", optional($.hop_range))),
        optional($.property_map),
        "]",
      ),

    property_map: ($) =>
      seq("{", optional(commaSep1(seq(field("key", $._name), ":", $._expression))), "}"),

    // Expressions, loosest binding first.

    _expression: ($) =>
      choice(
        $.binary_expression,
        $.unary_expression,
        $.is_expression,
        $.property_access,
        $._primary,
      ),

    binary_expression: ($) =>
      choice(
        prec.left(1, seq($._expression, kw("OR"), $._expression)),
        prec.left(2, seq($._expression, kw("XOR"), $._expression)),
        prec.left(3, seq($._expression, kw("AND"), $._expression)),
        prec.left(
          5,
          seq(
            $._expression,
            choice(
              "=",
              "<>",
              "<",
              "<=",
              ">",
              ">=",
              kw("IN"),
              seq(kw("STARTS"), kw("WITH")),
              seq(kw("ENDS"), kw("WITH")),
              kw("CONTAINS"),
            ),
            $._expression,
          ),
        ),
        prec.left(6, seq($._expression, choice("+", "-"), $._expression)),
        prec.left(7, seq($._expression, choice("*", "/", "%"), $._expression)),
      ),

    unary_expression: ($) =>
      choice(
        prec.right(4, seq(kw("NOT"), $._expression)),
        prec.right(8, seq(choice("-", "+"), $._expression)),
      ),

    is_expression: ($) =>
      prec.left(
        5,
        seq(
          $._expression,
          kw("IS"),
          optional(kw("NOT")),
          choice(kw("NULL"), seq(kw("TYPED"), $.value_type)),
        ),
      ),

    property_access: ($) => prec.left(9, seq($._expression, ".", field("property", $._name))),

    variable: ($) => $._name,

    // A name with a bracket after it. `PATH` is a name until a bracket
    // follows it, the same way `DATE` is a name until a string does, so
    // which name may stand here is a question for the binder and not
    // for the shape of the text.
    path_constructor: ($) =>
      prec(2, seq(field("name", $.identifier), "[", optional(commaSep1($._expression)), "]")),

    // A match written where a predicate goes. The brace is what tells
    // it apart from a variable called exists.
    exists_block: ($) =>
      prec(
        2,
        seq(
          field("name", $.identifier),
          "{",
          optional(kw("MATCH")),
          $.pattern,
          optional($.where_clause),
          "}",
        ),
      ),

    function_call: ($) =>
      prec(
        2,
        seq(
          field("name", $._name),
          "(",
          optional(kw("DISTINCT")),
          optional(choice("*", commaSep1($._expression))),
          ")",
        ),
      ),

    cast: ($) => seq(kw("CAST"), "(", $._expression, kw("AS"), $.value_type, ")"),

    list: ($) => seq("[", optional(commaSep1($._expression)), "]"),

    record: ($) => $.property_map,

    // Value types.

    value_type: ($) =>
      seq(
        $._type_component,
        repeat(seq("|", $._type_component)),
        optional(seq(kw("NOT"), kw("NULL"))),
      ),

    _type_component: ($) =>
      choice(
        seq(
          kw("ANY"),
          optional(
            choice(kw("VALUE"), kw("RECORD"), kw("GRAPH"), seq(kw("PROPERTY"), kw("VALUE"))),
          ),
        ),
        seq(kw("RECORD"), optional($.record_fields)),
        $.list_type,
        seq(
          $.type_name,
          optional(seq("(", commaSep1($.integer), ")")),
          optional(seq($.list_name, optional(seq("(", $.integer, ")")))),
        ),
      ),

    // Right associative because `IS TYPED LIST < INT >` and a list type
    // followed by a comparison are the same three tokens, and the
    // engine reads the angle bracket as the element type it opens.
    list_type: ($) =>
      prec.right(
        seq(
          $.list_name,
          optional(seq("<", $.value_type, ">")),
          optional(seq("(", $.integer, ")")),
        ),
      ),

    list_name: ($) => seq(optional(kw("GROUP")), choice(kw("LIST"), kw("ARRAY"))),

    type_name: ($) => prec.right(seq($.identifier, optional($.identifier))),

    // Catalog statements.

    create_schema: ($) =>
      seq(
        kw("CREATE"),
        kw("SCHEMA"),
        optional(seq(kw("IF"), kw("NOT"), kw("EXISTS"))),
        $.schema_path,
      ),

    drop_schema: ($) =>
      seq(kw("DROP"), kw("SCHEMA"), optional(seq(kw("IF"), kw("EXISTS"))), $.schema_path),

    create_graph: ($) =>
      seq(
        kw("CREATE"),
        optional(seq(kw("OR"), kw("REPLACE"))),
        optional(kw("PROPERTY")),
        kw("GRAPH"),
        optional(seq(kw("IF"), kw("NOT"), kw("EXISTS"))),
        $.graph_name,
        optional($.graph_type_ref),
        optional(seq(kw("AS"), kw("COPY"), kw("OF"), $.graph_ref)),
      ),

    create_graph_type: ($) =>
      seq(
        kw("CREATE"),
        optional(seq(kw("OR"), kw("REPLACE"))),
        optional(kw("PROPERTY")),
        kw("GRAPH"),
        kw("TYPE"),
        optional(seq(kw("IF"), kw("NOT"), kw("EXISTS"))),
        field("name", $._name),
        optional(kw("AS")),
        $.graph_type_source,
      ),

    drop_graph_type: ($) =>
      seq(
        kw("DROP"),
        optional(kw("PROPERTY")),
        kw("GRAPH"),
        kw("TYPE"),
        optional(seq(kw("IF"), kw("EXISTS"))),
        field("name", $._name),
      ),

    schema_path: ($) => seq("/", optional(seq($._name, repeat(seq("/", $._name))))),

    graph_name: ($) => choice($._name, seq("/", repeat(seq($._name, "/")), $._name)),

    graph_type_ref: ($) =>
      choice(
        seq(kw("ANY"), optional(kw("PROPERTY")), optional(kw("GRAPH"))),
        seq(choice("::", kw("TYPED")), field("name", $._name)),
        $.graph_type_source,
      ),

    graph_type_source: ($) => choice($.element_type_list, seq(kw("LIKE"), field("name", $._name))),

    element_type_list: ($) => seq("{", optional(commaSep1($.element_type)), "}"),

    element_type: ($) =>
      seq(
        optional(
          seq(
            choice(kw("NODE"), kw("EDGE"), kw("RELATIONSHIP")),
            kw("TYPE"),
            field("name", $._name),
          ),
        ),
        $.node_type_pattern,
        optional(seq($.arc, $.node_type_pattern)),
      ),

    node_type_pattern: ($) => seq("(", optional($.type_body), ")"),

    arc: ($) =>
      choice(
        seq("-", "[", optional($.type_body), "]", "-", optional(">")),
        seq("<", "-", "[", optional($.type_body), "]", "-"),
        seq("~", "[", optional($.type_body), "]", "~"),
      ),

    // Every part of a body is optional and a body of nothing is `()`,
    // which is a pattern that holds of every element. Written as a
    // choice rather than four optionals because a rule that matches
    // the empty string is one an LR parser cannot place.
    type_body: ($) =>
      choice(
        seq(
          field("name", $._name),
          optional(seq(":", $.label_set)),
          optional(seq("=>", ":", $.label_set)),
          optional($.property_types),
        ),
        seq(
          ":",
          $.label_set,
          optional(seq("=>", ":", $.label_set)),
          optional($.property_types),
        ),
        seq("=>", ":", $.label_set, optional($.property_types)),
        $.property_types,
      ),

    label_set: ($) => seq($.label, repeat(seq("&", $.label))),

    property_types: ($) =>
      choice(
        seq(kw("NO"), kw("PROPERTIES")),
        seq(
          optional(kw("PROPERTIES")),
          "{",
          optional(commaSep1($.property_type)),
          "}",
        ),
      ),

    property_type: ($) =>
      seq(field("name", $._name), choice("::", kw("TYPED")), $.value_type),

    // Lexical shapes.

    _name: ($) => choice($.identifier, $.quoted_identifier),

    identifier: ($) => /[A-Za-z_][A-Za-z0-9_]*/,

    quoted_identifier: ($) => seq("`", /[^`]*/, "`"),

    literal: ($) =>
      choice(kw("NULL"), kw("TRUE"), kw("FALSE"), $.integer, $.float, $.string),

    // A name and a string is a temporal literal, which is the rule the
    // engine reads by: the name is a type only when a string follows.
    // The name may be two words, because LOCAL and ZONED are halves of
    // a name rather than names of their own.
    temporal_literal: ($) => prec(2, seq(field("type", $.type_name), $.string)),

    integer: ($) => token(choice(/[0-9]+[Mm]?/, /0[xX][0-9a-fA-F]+/, /0[oO][0-7]+/, /0[bB][01]+/)),

    float: ($) =>
      token(
        choice(
          /[0-9]+\.[0-9]+([eE][+-]?[0-9]+)?[MmFfDd]?/,
          /[0-9]+[eE][+-]?[0-9]+[MmFfDd]?/,
          /[0-9]+[FfDd]/,
        ),
      ),

    // An `@` before the quote turns escape processing off, and a
    // doubled quote is then the only way to write one.
    string: ($) =>
      token(
        choice(
          seq("'", repeat(choice(/[^'\\]/, /\\./)), "'"),
          seq('"', repeat(choice(/[^"\\]/, /\\./)), '"'),
          seq("@'", repeat(choice(/[^']/, "''")), "'"),
          seq('@"', repeat(choice(/[^"]/, '""')), '"'),
        ),
      ),

    comment: ($) => token(choice(seq("//", /[^\n]*/), seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/"))),
  },
});

/** The statements of a file, separated by semicolons. */
function commaSepSemi($) {
  return seq($._statement, repeat(seq(";", $._statement)));
}
