grammar/tree-sitter-gql/test/corpus/catalog.txt
================================================================================
A schema created and dropped
================================================================================

CREATE SCHEMA IF NOT EXISTS /social; DROP SCHEMA IF EXISTS /social

--------------------------------------------------------------------------------

(source_file
  (create_schema
    (schema_path
      (identifier)))
  (drop_schema
    (schema_path
      (identifier))))

================================================================================
A graph, copied from another
================================================================================

CREATE OR REPLACE PROPERTY GRAPH /social/main AS COPY OF /social/staging

--------------------------------------------------------------------------------

(source_file
  (create_graph
    (graph_name
      (identifier)
      (identifier))
    (graph_ref
      (graph_name
        (identifier)
        (identifier)))))

================================================================================
A graph type written out where the graph is created
================================================================================

CREATE GRAPH /social/main {
  (:Person {name :: STRING, age :: INT64 NOT NULL}),
  (:Person)-[:KNOWS {since :: DATE}]->(:Person)
}

--------------------------------------------------------------------------------

(source_file
  (create_graph
    (graph_name
      (identifier)
      (identifier))
    (graph_type_ref
      (graph_type_source
        (element_type_list
          (element_type
            (node_type_pattern
              (type_body
                (label_set
                  (label
                    (identifier)))
                (property_types
                  (property_type
                    (identifier)
                    (value_type
                      (type_name
                        (identifier))))
                  (property_type
                    (identifier)
                    (value_type
                      (type_name
                        (identifier))))))))
          (element_type
            (node_type_pattern
              (type_body
                (label_set
                  (label
                    (identifier)))))
            (arc
              (type_body
                (label_set
                  (label
                    (identifier)))
                (property_types
                  (property_type
                    (identifier)
                    (value_type
                      (type_name
                        (identifier)))))))
            (node_type_pattern
              (type_body
                (label_set
                  (label
                    (identifier)))))))))))

================================================================================
A named graph type, and a graph that follows it
================================================================================

CREATE GRAPH TYPE kind AS { (a :Person NO PROPERTIES) };
CREATE GRAPH /social/main::kind

--------------------------------------------------------------------------------

(source_file
  (create_graph_type
    (identifier)
    (graph_type_source
      (element_type_list
        (element_type
          (node_type_pattern
            (type_body
              (identifier)
              (label_set
                (label
                  (identifier)))
              (property_types)))))))
  (create_graph
    (graph_name
      (identifier)
      (identifier))
    (graph_type_ref
      (identifier))))

================================================================================
A graph type dropped
================================================================================

DROP PROPERTY GRAPH TYPE IF EXISTS kind

--------------------------------------------------------------------------------

(source_file
  (drop_graph_type
    (identifier)))
